Fixed overlay overlap issue

--- a/Portfolio/src/app/information-overlay/information-overlay.component.css
+++ b/Portfolio/src/app/information-overlay/information-overlay.component.css
@@ -1,5 +1,6 @@
 .img-container{
   position: relative;
+  display: flex;
 }
 
 img {
